[package]
name = "rust_gem_sample"
version = "0.1.0"
edition = "2021"
authors = ["atolix <82761106+atolix@users.noreply.github.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.4" }
rb-allocator = "0.9.6"
rb-sys = "0.9.79"
uuid = { version = "1.4.0", features = ["v4"] }
